<resources>
    <string name="app_name">东方胎安</string>
    <string name="language_simplified_chinese" translatable="false">中文简体</string>
    <string name="language_traditional_chinese" translatable="false">中文繁體</string>
    <string name="language_english" translatable="false">English</string>
    <string name="unit_bar" translatable="false">Bar</string>
    <string name="unit_psi" translatable="false">PSI</string>
    <string name="unit_kpa" translatable="false">Kpa</string>
    <string name="unit_kg" translatable="false">Kg</string>
    <string name="degree_celsius" translatable="false">℃</string>
    <string name="degree_fahrenheit" translatable="false">℉</string>

    <string name="unknown_device">未知设备</string>
    <string name="ble_not_supported">该设备不支持BLE</string>
    <string name="error_bluetooth_not_supported">蓝牙不可用</string>

    <string name="activity_main">胎压监测</string>
    <string name="activity_scan">设备搜索</string>
    <string name="menu_scan">搜索</string>
    <string name="menu_stop">停止</string>
    <string name="tab_monitor">功能</string>
    <string name="tab_learn">ID学习</string>
    <string name="tab_exchange">轮胎换位</string>
    <string name="tab_setting">设置</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_reset">恢复出厂设置</string>
    <string name="btn_bluetooth">蓝牙</string>
    <string name="btn_tire1">左前轮</string>
    <string name="btn_tire2">左后轮</string>
    <string name="btn_tire3">右前轮</string>
    <string name="btn_tire4">右后轮</string>
    <string name="btn_tire1_match">左前轮学习</string>
    <string name="btn_tire2_match">左后轮学习</string>
    <string name="btn_tire3_match">右前轮学习</string>
    <string name="btn_tire4_match">右后轮学习</string>
    <string name="notification_service_running">TPMS正在运行</string>

    <string name="label_language">语言</string>
    <string name="label_unit">压力单位</string>
    <string name="label_degree">温度单位</string>
    <string name="label_pressure_max">压力报警上限</string>
    <string name="label_pressure_min">压力报警下限</string>
    <string name="label_temperature_max">温度报警上限</string>
    <string name="label_theme">主题</string>
    <string name="theme_plain">简洁</string>
    <string name="theme_star">星空</string>
    <string name="theme_modern">科技</string>
    <string name="label_voice">声音</string>
    <string name="label_leaking">漏气</string>
    <string name="label_no_signal">无信号</string>

    <string name="alert_message_usb_host_unavailable">您的手机不支持USB HOST，请更换其他手机再试</string>
    <string name="alert_message_usb_io_error">主机连接错误</string>
    <string name="alert_message_learn">胎压学习搜索中%1$s</string>
    <string name="alert_message_exchange">是否交换%1$s和%2$s</string>

    <string name="alert_message_tire1_leaking">左前轮漏气</string>
    <string name="alert_message_tire2_leaking">左后轮漏气</string>
    <string name="alert_message_tire3_leaking">右前轮漏气</string>
    <string name="alert_message_tire4_leaking">右后轮漏气</string>
    <string name="alert_message_tire1_pressure_high">左前轮胎压过高</string>
    <string name="alert_message_tire2_pressure_high">左后轮胎压过高</string>
    <string name="alert_message_tire3_pressure_high">右前轮胎压过高</string>
    <string name="alert_message_tire4_pressure_high">右后轮胎压过高</string>
    <string name="alert_message_tire1_pressure_low">左前轮胎压过低</string>
    <string name="alert_message_tire2_pressure_low">左后轮胎压过低</string>
    <string name="alert_message_tire3_pressure_low">右前轮胎压过低</string>
    <string name="alert_message_tire4_pressure_low">右后轮胎压过低</string>
    <string name="alert_message_tire1_pressure_error">左前轮传感器失效</string>
    <string name="alert_message_tire2_pressure_error">左后轮传感器失效</string>
    <string name="alert_message_tire3_pressure_error">右前轮传感器失效</string>
    <string name="alert_message_tire4_pressure_error">右后轮传感器失效</string>
    <string name="alert_message_tire1_temp_high">左前轮温度过高</string>
    <string name="alert_message_tire2_temp_high">左后轮温度过高</string>
    <string name="alert_message_tire3_temp_high">右前轮温度过高</string>
    <string name="alert_message_tire4_temp_high">右后轮温度过高</string>
    <string name="alert_message_tire1_battery_low">左前轮电量不足</string>
    <string name="alert_message_tire2_battery_low">左后轮电量不足</string>
    <string name="alert_message_tire3_battery_low">右前轮电量不足</string>
    <string name="alert_message_tire4_battery_low">右后轮电量不足</string>
    <string name="alert_message_tire1_matched">左前轮学习成功</string>
    <string name="alert_message_tire2_matched">左后轮学习成功</string>
    <string name="alert_message_tire3_matched">右前轮学习成功</string>
    <string name="alert_message_tire4_matched">右后轮学习成功</string>

</resources>
