<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/page_setting_padding1"
    android:paddingLeft="@dimen/page_setting_padding2"
    android:paddingRight="@dimen/page_setting_padding2"
    android:paddingTop="@dimen/page_setting_padding1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RadioGroup
            android:id="@+id/group_voice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_voice" />

            <RadioButton
                android:id="@+id/voice_open"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_voice_on"
                android:textSize="0sp" />

            <RadioButton
                android:id="@+id/voice_close"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_voice_off"
                android:textSize="0sp" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/group_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_language" />

            <RadioButton
                android:id="@+id/language_simplified_chinese"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_simplified_chinese" />

            <RadioButton
                android:id="@+id/language_traditional_chinese"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_traditional_chinese" />

            <RadioButton
                android:id="@+id/language_english"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_english" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/group_pressure_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_unit" />

            <RadioButton
                android:id="@+id/unit_bar"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_bar" />

            <RadioButton
                android:id="@+id/unit_psi"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_psi" />

            <RadioButton
                android:id="@+id/unit_kpa"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_kpa" />

            <RadioButton
                android:id="@+id/unit_kg"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_kg" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/group_temp_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_degree" />

            <RadioButton
                android:id="@+id/degree_celsius"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree_celsius" />

            <RadioButton
                android:id="@+id/degree_fahrenheit"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree_fahrenheit" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/group_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_theme" />

            <RadioButton
                android:id="@+id/theme_plain"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_plain" />

            <RadioButton
                android:id="@+id/theme_star"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_star" />

            <RadioButton
                android:id="@+id/theme_modern"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_modern" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_pressure_max" />

            <com.ttonway.tpms.widget.MyNumberPicker
                android:id="@+id/pressure_upper_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/setting_margin_half" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_pressure_min" />

            <com.ttonway.tpms.widget.MyNumberPicker
                android:id="@+id/pressure_lower_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/setting_margin_half" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_temperature_max" />

            <com.ttonway.tpms.widget.MyNumberPicker
                android:id="@+id/temp_upper_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/setting_margin_half" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/setting_margin_half"
                android:background="@drawable/btn_positive"
                android:minHeight="@dimen/button_minheight"
                android:minWidth="200dp"
                android:text="@string/btn_reset"
                android:textColor="@color/text_green"
                android:textSize="@dimen/text_setting_large" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/text_white" />
    </LinearLayout>
</ScrollView>