<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ttonway.tpms.widget.CarImageView
        android:id="@+id/image_car"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        android:src="@drawable/car" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="-3dp"
        android:layout_toLeftOf="@id/image_car"
        android:gravity="right"
        android:orientation="vertical">

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/board1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_board"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_tire1_match"
                android:textColor="@color/board_content_tintcolor"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/board2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_board"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_tire2_match"
                android:textColor="@color/board_content_tintcolor"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="-3dp"
        android:layout_toRightOf="@id/image_car"
        android:gravity="left"
        android:orientation="vertical">

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/board3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/right_board"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_tire3_match"
                android:textColor="@color/board_content_tintcolor"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/board4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/right_board"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_tire4_match"
                android:textColor="@color/board_content_tintcolor"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>