<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_plain"
        android:scaleType="centerCrop" />

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/realtabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" />

    </TabHost>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_background_bottom">

            <Button
                android:id="@+id/btn_monitor"
                style="@style/TabButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_monitor"
                android:text="@string/tab_monitor" />
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/menu_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/divider" />

            <ImageView
                android:id="@+id/menu_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/divider"
                android:src="@drawable/tab_group_background" />

            <FrameLayout
                android:id="@+id/menu_learn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_background_bottom">

                <Button
                    android:id="@+id/btn_learn"
                    style="@style/TabButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_learn"
                    android:text="@string/tab_learn" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/menu_learn"
                android:background="@drawable/tab_background_bottom">

                <Button
                    android:id="@+id/btn_exchange"
                    style="@style/TabButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_exchange"
                    android:text="@string/tab_exchange" />
            </FrameLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:paddingRight="16dp">

        <FrameLayout
            android:id="@+id/box_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_background_bottom">

            <Button
                android:id="@+id/btn_bluetooth"
                style="@style/TabButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:drawableTop="@drawable/ic_bluetooth"
                android:text="@string/btn_bluetooth"
                android:textColor="@color/text_white" />

            <ProgressBar
                android:id="@+id/progress_bluetooth"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_background_bottom">

            <Button
                android:id="@+id/btn_setting"
                style="@style/TabButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_setting"
                android:text="@string/tab_setting" />
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>