<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ttonway.tpms.widget.CarImageView
        android:id="@+id/image_car"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        android:src="@drawable/car" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="-3dp"
        android:layout_toLeftOf="@id/image_car"
        android:gravity="right"
        android:orientation="vertical">

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/board1"
            style="@style/TireBorad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_board"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:text="@string/btn_tire1"
                android:textColor="@color/board_content_tintcolor"
                android:textSize="@dimen/text_large" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tire_off"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/board2"
            style="@style/TireBorad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_board"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:text="@string/btn_tire2"
                android:textColor="@color/board_content_tintcolor"
                android:textSize="@dimen/text_large" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tire_off"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="-3dp"
        android:layout_toRightOf="@id/image_car"
        android:gravity="left"
        android:orientation="vertical">

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/board3"
            style="@style/TireBorad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/right_board"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:text="@string/btn_tire3"
                android:textColor="@color/board_content_tintcolor"
                android:textSize="@dimen/text_large" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tire_off"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/board4"
            style="@style/TireBorad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/right_board"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:text="@string/btn_tire4"
                android:textColor="@color/board_content_tintcolor"
                android:textSize="@dimen/text_large" />

            <ImageView
                android:id="@+id/image4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tire_off"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>